; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_nullify_user_rating.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_nullify_user_rating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_hints_nullify_user_rating = type { i32 }
%struct.TYPE_3__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nullify_user_rating(%struct.lev_hints_nullify_user_rating* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lev_hints_nullify_user_rating*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.lev_hints_nullify_user_rating* %0, %struct.lev_hints_nullify_user_rating** %3, align 8
  %5 = load %struct.lev_hints_nullify_user_rating*, %struct.lev_hints_nullify_user_rating** %3, align 8
  %6 = getelementptr inbounds %struct.lev_hints_nullify_user_rating, %struct.lev_hints_nullify_user_rating* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.TYPE_3__* @conv_user_id(i32 %7)
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %4, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = call i32 @chg_list_add_string(i32* %13, i32* %15, i32 0, i32 0, i32* null)
  store i32 1, i32* %2, align 4
  br label %18

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %11
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local %struct.TYPE_3__* @conv_user_id(i32) #1

declare dso_local i32 @chg_list_add_string(i32*, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
